--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -51,3 +52,4 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+Logs/
